[metadata]
name=VF747-SDK-Python
version=0.0.1
authoer=Tobias Bungard
author_email=tobi-bungard@t-online.de
description=Implementation of the serial protocol for the VF747 RFID reader
long_descritption=file:README.md
long_descritption_content_type=text/markdown
url=https://github.com/Toboxos/VF747-SDK-Python

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src